# cocos2d-x

./: .appveyor.yml  .badaprj  .clang-tidy  .cocos-project.json  .cproject  .cproject.REMOVED.git-id  .gitignore  .gitmodules  .project  .travis.yml  0001-cocos2d-x-extensions-ios-staic-library-proj-file.patch  AUTHORS  Box2D.mkf  CCConfiguration.cpp  CC_LUA_ENGINE_README.mdown  CCamera.cpp  CDrawingPrimitives.cpp  CHANGELOG  CHANGELOG.REMOVED.git-id  CMakeLists.txt  CODING_STYLE.md  CONTRIBUTING.md  Cocos2d-x.uml  Cocos2d-x.~ml  CocosDenshion.mkf  Emscripten.TODO  Jenkinsfile  LICENSE.cocos2d-x  Makefile  Makefile.emscripten  Makefile.linux  README.cmake  README.html  README.md  README.mdown  README.txt  SECURITY.md  Test_zhukaixy.txt  Update deps to 167  VERSION  (+80 more)
chipmunk/: .badaprj  .cproject  .project  Android.mk  CMakeCache.txt  CMakeLists.txt  Makefile  Makefile-dynamic.ARM  Makefile.ARM  README.txt  chipmunk-win32.vcproj  chipmunk.TMK3  chipmunk.uphone.vcproj  chipmunk.vcproj  chipmunk.win32.vcproj  chipmunk_Arm.TMK3  cmake_install.cmake  manifest.xml
chipmunk/Demo/: Plink.c  UnsafeOps.c  cocos2dChipmunkDemo.cpp  cocos2dChipmunkDemo.h  drawSpace.c  drawSpace.h  iphone-ChipmunkDemo.h  iphone-ChipmunkDemo.m
chipmunk/include/: ccxCommon_uphone.h  ccxCommon_wophone.h
chipmunk/proj.airplay/: chipmunk.mkf
chipmunk/proj.bada/: .cproject
chipmunk/proj.blackberry/: .cproject
chipmunk/proj.linux/: .cproject  .project  Makefile
chipmunk/proj.marmalade/: chipmunk.mkf
chipmunk/proj.qnx/: .cproject  .project
chipmunk/proj.uphone/: Makefile-dynamic.ARM  Makefile.ARM
chipmunk/proj.win32/: chipmunk.win32.vcproj  chipmunk.win32.vcxproj  chipmunk.win32.vcxproj.filters
chipmunk/proj.wophone/: Makefile-dynamic.ARM  Makefile.ARM  chipmunk.TMK3  chipmunk.wophone.vcproj
chipmunk/src/: CMakeLists.txt  Makefile  chipmunk.c  cpArbiter.c  cpArray.c  cpBB.c  cpBBTree.c  cpBody.c  cpCollision.c  cpHashSet.c  cpPolyShape.c  cpShape.c  cpSpace.c  cpSpaceComponent.c  cpSpaceHash.c  cpSpaceQuery.c  cpSpaceStep.c  cpSpatialIndex.c  cpSweep1D.c  cpVect.c  prime.h
chipmunk/uphonefw/: chipmunkUnicodeScript.h  chipmunkUnicodeScript_str.h
cocos/: Android.mk  CCConsole.cpp  CCConsole.h  CMakeLists.txt  ccTypeInfo.h  cc_dummy.c  cocos2d-prefix.pch  cocos2d.cpp  cocos2d.h  doxygen_modules.h  precheader.h
cocos/2d/: Android.mk  AutoPolygon.cpp  AutoPolygon.h  CCAction.cpp  CCAction.h  CCActionCamera.cpp  CCActionCamera.h  CCActionCatmullRom.cpp  CCActionCatmullRom.h  CCActionEase.cpp  CCActionEase.h  CCActionGrid.cpp  CCActionGrid.h  CCActionGrid3D.cpp  CCActionGrid3D.h  CCActionInstant.cpp  CCActionInstant.h  CCActionInterval.cpp  CCActionInterval.h  CCActionManager.cpp  CCActionManager.h  CCActionPageTurn3D.cpp  CCActionPageTurn3D.h  CCActionProgressTimer.cpp  CCActionProgressTimer.h  CCActionTiledGrid.cpp  CCActionTiledGrid.h  CCActionTimeline.cpp  CCActionTimeline.h  CCActionTween.cpp  CCActionTween.h  CCAnimation.cpp  CCAnimation.h  CCAnimationCache.cpp  CCAnimationCache.h  CCAtlasNode.cpp  CCAtlasNode.h  CCAutoPolygon.cpp  CCAutoPolygon.h  CCCamera.cpp  (+306 more)
cocos/3d/: 3dExport.h  Android.mk  AnimationValue.cpp  AnimationValue.h  AttachNode.cpp  AttachNode.h  Base.h  BonePart.cpp  BonePart.h  BoundingBox.cpp  BoundingBox.h  BundleData.cpp  BundleData.h  C3DAABB.cpp  C3DAABB.h  C3DActionListener.cpp  C3DActionListener.h  C3DAnimatedLight.cpp  C3DAnimatedLight.h  C3DAnimation.cpp  C3DAnimation.h  C3DAnimationChannel.cpp  C3DAnimationChannel.h  C3DAnimationClip.cpp  C3DAnimationClip.h  C3DAnimationCurve.cpp  C3DAnimationCurve.h  C3DBatchMesh.cpp  C3DBatchMesh.h  C3DBatchModel.cpp  C3DBatchModel.h  C3DBone.cpp  C3DBone.h  C3DCamera.cpp  C3DCamera.h  C3DCapsule.cpp  C3DCapsule.h  C3DCollitionBox.cpp  C3DCollitionBox.h  C3DCone.cpp  (+251 more)
cocos/PAL/: CCPAL.h  CCPALMacros.h  CCPALManager.cpp  CCPALManager.h  CCPALTypes.h
cocos/audio/: AudioEngine.cpp  CMakeLists.txt  SimpleAudioEngine.cpp
cocos/base/: C3DTransform.cpp  C3DTransform.h  CCAffineTransform.cpp  CCAffineTransform.h  CCArray.cpp  CCArray.h  CCAsyncTaskPool.cpp  CCAsyncTaskPool.h  CCAtomic.h  CCAutoreleasePool.cpp  CCAutoreleasePool.h  CCBool.h  CCCamera.cpp  CCCamera.h  CCConfiguration.cpp  CCConfiguration.h  CCConsole.cpp  CCConsole.h  CCConsoleGestureCmd.cpp  CCConsoleGestureCmd.h  CCController-android.cpp  CCController-apple.mm  CCController-desktop.cpp  CCController-iOS.mm  CCController-linux-win32.cpp  CCController-ohos.cpp  CCController.cpp  CCController.h  CCControllerAxisInput.cpp  CCControllerAxisInput.h  CCControllerButtonInput.cpp  CCControllerButtonInput.h  CCControllerDirectionPad.cpp  CCControllerDirectionPad.h  CCControllerElement.cpp  CCControllerElement.h  CCControllerThumbstick.cpp  CCControllerThumbstick.h  CCData.cpp  CCData.h  (+161 more)
cocos/c/: CCApplication_C.cpp  CCApplication_C.h  CCDefines.h  CCDirector_C.cpp  CCDirector_C.h  CCNode_C.cpp  CCNode_C.h  CCScene_C.cpp  CCScene_C.h  CCSprite_C.cpp  CCSprite_C.h  CCVector_C.h  CCocos2D.h
cocos/deprecated/: CCArray.cpp  CCArray.h  CCBool.h  CCDeprecated.cpp  CCDeprecated.h  CCDictionary.cpp  CCDictionary.h  CCDouble.h  CCFloat.h  CCInteger.h  CCNotificationCenter.cpp  CCNotificationCenter.h  CCSet.cpp  CCSet.h  CCString.cpp  CCString.h  CMakeLists.txt
cocos/editor-support/: CMakeLists.txt
cocos/gui/: Android.mk  CMakeLists.txt  CocosGUI.cpp  CocosGUI.h  GUIDefine.h  Layout.cpp  Layout.h  LayoutParameter.cpp  LayoutParameter.h  Makefile  UIButton.cpp  UIButton.h  UICheckBox.cpp  UICheckBox.h  UIDragPanel.cpp  UIDragPanel.h  UIHelper.cpp  UIHelper.h  UIImageView.cpp  UIImageView.h  UIInputManager.cpp  UIInputManager.h  UILabel.cpp  UILabel.h  UILabelAtlas.cpp  UILabelAtlas.h  (+35 more)
extensions/: .cproject  .project  Android.mk  CCDeprecated-ext.cpp  CCDeprecated-ext.h  CMakeLists.txt  ExtensionDeprecated.cpp  ExtensionDeprecated.h  ExtensionExport.h  ExtensionMacros.h  GlobalDefine.h  cocos-ext.h
tests/: .badaprj  .cproject  .cproject.REMOVED.git-id  .project  Android.mk  AppDelegate.cpp  AppDelegate.h  CMakeLists.txt  TestCocos2dx.htb  application.xml  signature.xml
(+24730 files in other folders)
